<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clear"
    android:id="@+id/account_fragment_root"
    tools:context=".accounts.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_fragment_subroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        >



        <androidx.cardview.widget.CardView
            android:id="@+id/my_account_card"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginTop="36dp"
            android:background="@color/standard_text_color"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_account_card_internal_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_my_account"
                    android:layout_width="156dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/my_account"
                    android:textAlignment="center"
                    android:textColor="@color/standard_text_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_my_account_name"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="MyName"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.106"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_my_account"
                    app:layout_constraintVertical_bias="0.117" />

                <TextView
                    android:id="@+id/title_my_account_level"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Basic Member"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/title_my_account_name"
                    app:layout_constraintStart_toStartOf="@+id/title_my_account_name"
                    app:layout_constraintTop_toBottomOf="@+id/title_my_account_name" />

                <Button
                    android:id="@+id/change_name_button"
                    android:layout_width="49dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="12dp"
                    android:backgroundTint="@color/standard_text_color"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="change"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@+id/title_my_account_level"
                    app:layout_constraintStart_toEndOf="@+id/title_my_account_name"
                    app:layout_constraintTop_toTopOf="@+id/title_my_account_name"
                    app:layout_constraintVertical_bias="0.391" />

                <com.google.android.material.navigation.NavigationView
                    android:id="@+id/account_navigation_menu"
                    android:layout_width="301dp"
                    android:layout_height="119dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:menu="@menu/account_options_menu"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/my_settings_card"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/standard_text_color"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_account_card" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/go_premium"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_premium2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorry_coming_soon"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_premium" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>